Fixed about paragraph spacing

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -66,8 +66,11 @@
 
 @media (max-width: 932px){
     .header{
-        height: 100vh;
-        width: 100vw;
+        background-size: auto;
+    }
+
+    .about p {
+        margin-left: 10px;
     }
 
     .header .social i {
